--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
     <section class="section-home content-section col-xs-12 no-padding">
         <div class="col-xs-12 no-padding titulo-section-box">
             <span class="ff-lato titulo-section">ESTAMPAS</span>
-            <p class="ff-lato sub-frase">Por: Henrietta Harris</p>
+            <p class="ff-lato sub-frase">Por: Vitória Santos Cruz</p>
         </div>
         <ul class="col-xs-12 no-padding"> 
             <li class="item-prod col-xs-6 col-sm-6 col-md-3 col-lg-3 estampas-box transition">
@@ -309,22 +309,22 @@
                     <div id="owl-votacao3" class="col-xs-12 no-padding">
                         <div class="item esq">
                             <div class="imgLiquid imgLiquidFill img-votacao">
-                                <img src="public/img/3.1.png" alt="Owl Image">
+                                <img src="public/img/estampa1.png" alt="Owl Image">
                             </div>
                         </div>
                         <div class="item dir">
                             <div class="imgLiquid imgLiquidFill img-votacao">
-                                <img src="public/img/3.2.png" alt="Owl Image">
+                                <img src="public/img/estampa2.png" alt="Owl Image">
                             </div>
                         </div>
                         <div class="item esq">
                             <div class="imgLiquid imgLiquidFill img-votacao">
-                                <img src="public/img/3.3.png" alt="Owl Image">
+                                <img src="public/img/estampa3.png" alt="Owl Image">
                             </div>
                         </div>
                         <div class="item dir">
                             <div class="imgLiquid imgLiquidFill img-votacao">
-                                <img src="public/img/3.4.png" alt="Owl Image">
+                                <img src="public/img/estampa4.png" alt="Owl Image">
                             </div>
                         </div>
                     </div>
