Changing text/images

--- a/uptoyou.html
+++ b/uptoyou.html
@@ -218,22 +218,22 @@
                     <div id="owl-votacao3" class="col-xs-12 no-padding">
                         <div class="item esq">
                             <div class="imgLiquid imgLiquidFill img-votacao">
-                                <img src="public/img/estampa1.png" alt="Owl Image">
+                                <img src="public/img/3.1.png" alt="Owl Image">
                             </div>
                         </div>
                         <div class="item dir">
                             <div class="imgLiquid imgLiquidFill img-votacao">
-                                <img src="public/img/estampa2.png" alt="Owl Image">
+                                <img src="public/img/3.2.png" alt="Owl Image">
                             </div>
                         </div>
                         <div class="item esq">
                             <div class="imgLiquid imgLiquidFill img-votacao">
-                                <img src="public/img/estampa3.png" alt="Owl Image">
+                                <img src="public/img/3.3.png" alt="Owl Image">
                             </div>
                         </div>
                         <div class="item dir">
                             <div class="imgLiquid imgLiquidFill img-votacao">
-                                <img src="public/img/estampa4.png" alt="Owl Image">
+                                <img src="public/img/3.4.png" alt="Owl Image">
                             </div>
                         </div>
                     </div>
