--- a/girlgang.html
+++ b/girlgang.html
@@ -130,17 +130,86 @@
 
     <div class="parte-imagens col-xs-12 no-padding">
         <div id="owl-gang" class="col-xs-12 no-padding">
-            <div class="col-xs-12 no-padding">
-                <img src="public/img/ban3.png" alt="">
+            <div class="col-xs-12 img-venda no-padding">
+                <center><img src="public/img/girlgang/gg_1.jpg" class="img-vertical" alt=""></center>
             </div>
-            <div class="col-xs-12 col-xs-12 img-venda">
-                <img src="public/img/ban3.png" alt="Owl Image">
+            <div class="col-xs-12 img-venda no-padding">
+                <center><img src="public/img/girlgang/gg_2.jpg" class="img-vertical" alt="Owl Image"></center>
             </div>
-            <div class="col-xs-12 col-xs-12 img-venda">
-                <img src="public/img/ban3.png" alt="Owl Image">
+            <div class="col-xs-12 img-venda no-padding">
+                <center><img src="public/img/girlgang/gg_3.jpg" class="img-vertical" alt="Owl Image"></center>
             </div>
-            <div class="col-xs-12 col-xs-12 img-venda">
-                <img src="public/img/ban3.png" alt="Owl Image">
+            <div class="col-xs-12 img-venda no-padding">
+                <center><img src="public/img/girlgang/gg_4.jpg" class="img-vertical" alt="Owl Image"></center>
+            </div>
+            <div class="col-xs-12 img-venda no-padding">
+                <center><img src="public/img/girlgang/gg_5.jpg" class="img-horizontal" alt=""></center>
+            </div>
+            <div class="col-xs-12 img-venda no-padding">
+                <center><img src="public/img/girlgang/gg_6.jpg" class="img-vertical" alt="Owl Image"></center>
+            </div>
+            <div class="col-xs-12 img-venda no-padding">
+                <center><img src="public/img/girlgang/gg_7.jpg" class="img-vertical" alt="Owl Image"></center>
+            </div>
+            <div class="col-xs-12 img-venda no-padding">
+                <center><img src="public/img/girlgang/gg_8.jpg" class="img-vertical" alt="Owl Image"></center>
+            </div>
+            <div class="col-xs-12 img-venda no-padding">
+                <center><img src="public/img/girlgang/gg_9.jpg" class="img-vertical" alt=""></center>
+            </div>
+            <div class="col-xs-12 img-venda no-padding">
+                <center><img src="public/img/girlgang/gg_10.jpg" class="img-horizontal" alt="Owl Image"></center>
+            </div>
+            <div class="col-xs-12 img-venda no-padding">
+                <center><img src="public/img/girlgang/gg_11.jpg" class="img-horizontal" alt="Owl Image"></center>
+            </div>
+            <div class="col-xs-12 img-venda no-padding">
+                <center><img src="public/img/girlgang/gg_12.jpg" class="img-horizontal" alt="Owl Image"></center>
+            </div>
+            <div class="col-xs-12 img-venda no-padding">
+                <center><img src="public/img/girlgang/gg_13.jpg" class="img-horizontal" alt=""></center>
+            </div>
+            <div class="col-xs-12 img-venda no-padding">
+                <center><img src="public/img/girlgang/gg_14.jpg" class="img-horizontal" alt="Owl Image"></center>
+            </div>
+            <div class="col-xs-12 img-venda no-padding">
+                <center><img src="public/img/girlgang/gg_15.jpg" class="img-horizontal" alt="Owl Image"></center>
+            </div>
+            <div class="col-xs-12 img-venda no-padding">
+                <center><img src="public/img/girlgang/gg_16.jpg" class="img-vertical" alt="Owl Image"></center>
+            </div>
+            <div class="col-xs-12 img-venda no-padding">
+                <center><img src="public/img/girlgang/gg_17.jpg" class="img-horizontal" alt=""></center>
+            </div>
+            <div class="col-xs-12 img-venda no-padding">
+                <center><img src="public/img/girlgang/gg_18.jpg" class="img-horizontal" alt="Owl Image"></center>
+            </div>
+            <div class="col-xs-12 img-venda no-padding">
+                <center><img src="public/img/girlgang/gg_19.jpg" class="img-horizontal" alt="Owl Image"></center>
+            </div>
+            <div class="col-xs-12 img-venda no-padding">
+                <center><img src="public/img/girlgang/gg_20.jpg" class="img-vertical" alt="Owl Image"></center>
+            </div>
+            <div class="col-xs-12 img-venda no-padding">
+                <center><img src="public/img/girlgang/gg_21.jpg" class="img-horizontal" alt=""></center>
+            </div>
+            <div class="col-xs-12 img-venda no-padding">
+                <center><img src="public/img/girlgang/gg_22.jpg" class="img-horizontal" alt="Owl Image"></center>
+            </div>
+            <div class="col-xs-12 img-venda no-padding">
+                <center><img src="public/img/girlgang/gg_23.jpg" class="img-horizontal" alt="Owl Image"></center>
+            </div>
+            <div class="col-xs-12 img-venda no-padding">
+                <center><img src="public/img/girlgang/gg_24.jpg" class="img-horizontal" alt="Owl Image"></center>
+            </div>
+            <div class="col-xs-12 img-venda no-padding">
+                <center><img src="public/img/girlgang/gg_25.jpg" class="img-horizontal" alt=""></center>
+            </div>
+            <div class="col-xs-12 img-venda no-padding">
+                <center><img src="public/img/girlgang/gg_26.jpg" class="img-horizontal" alt="Owl Image"></center>
+            </div>
+            <div class="col-xs-12 img-venda no-padding">
+                <center><img src="public/img/girlgang/gg_27.jpg" class="img-horizontal" alt="Owl Image"></center>
             </div>
         </div>
     </div>
@@ -149,57 +218,137 @@
         <div id="owl-miniaturas" class="owl-thumbs col-xs-12 no-padding">
             <div class="col-xs-12 no-padding-left" onclick="slideTo(0, '#owl-gang')">
                 <div class="col-xs-12 thumb-gang imgLiquid imgLiquidFill">
-                    <img src="public/img/ban3.png" alt="Owl Image">
+                    <img src="public/img/girlgang/gg_1.jpg" alt="Owl Image">
                 </div>
             </div>
             <div class="col-xs-12 no-padding-half" onclick="slideTo(1, '#owl-gang')">
                 <div class="col-xs-12 thumb-gang imgLiquid imgLiquidFill">
-                    <img src="public/img/ban3.png" alt="Owl Image">
+                    <img src="public/img/girlgang/gg_2.jpg" alt="Owl Image">
                 </div>
             </div>
             <div class="col-xs-12 no-padding-half" onclick="slideTo(2, '#owl-gang')">
                 <div class="col-xs-12 thumb-gang imgLiquid imgLiquidFill">
-                    <img src="public/img/ban3.png" alt="Owl Image">
+                    <img src="public/img/girlgang/gg_3.jpg" alt="Owl Image">
                 </div>
             </div>
             <div class="col-xs-12 no-padding-right" onclick="slideTo(3, '#owl-gang')">
                 <div class="col-xs-12 thumb-gang imgLiquid imgLiquidFill">
-                    <img src="public/img/ban3.png" alt="Owl Image">
+                    <img src="public/img/girlgang/gg_4.jpg" alt="Owl Image">
                 </div>
             </div>
             <div class="col-xs-12 no-padding-right" onclick="slideTo(4, '#owl-gang')">
                 <div class="col-xs-12 thumb-gang imgLiquid imgLiquidFill">
-                    <img src="public/img/ban3.png" alt="Owl Image">
+                    <img src="public/img/girlgang/gg_5.jpg" alt="Owl Image">
                 </div>
             </div>
             <div class="col-xs-12 no-padding-right" onclick="slideTo(5, '#owl-gang')">
                 <div class="col-xs-12 thumb-gang imgLiquid imgLiquidFill">
-                    <img src="public/img/ban3.png" alt="Owl Image">
+                    <img src="public/img/girlgang/gg_6.jpg" alt="Owl Image">
                 </div>
             </div>
             <div class="col-xs-12 no-padding-right" onclick="slideTo(6, '#owl-gang')">
                 <div class="col-xs-12 thumb-gang imgLiquid imgLiquidFill">
-                    <img src="public/img/ban3.png" alt="Owl Image">
+                    <img src="public/img/girlgang/gg_7.jpg" alt="Owl Image">
                 </div>
             </div>
             <div class="col-xs-12 no-padding-right" onclick="slideTo(7, '#owl-gang')">
                 <div class="col-xs-12 thumb-gang imgLiquid imgLiquidFill">
-                    <img src="public/img/ban3.png" alt="Owl Image">
+                    <img src="public/img/girlgang/gg_8.jpg" alt="Owl Image">
                 </div>
             </div>
             <div class="col-xs-12 no-padding-right" onclick="slideTo(8, '#owl-gang')">
                 <div class="col-xs-12 thumb-gang imgLiquid imgLiquidFill">
-                    <img src="public/img/ban3.png" alt="Owl Image">
+                    <img src="public/img/girlgang/gg_9.jpg" alt="Owl Image">
                 </div>
             </div>
             <div class="col-xs-12 no-padding-right" onclick="slideTo(9, '#owl-gang')">
                 <div class="col-xs-12 thumb-gang imgLiquid imgLiquidFill">
-                    <img src="public/img/ban3.png" alt="Owl Image">
+                    <img src="public/img/girlgang/gg_10.jpg" alt="Owl Image">
                 </div>
             </div>
             <div class="col-xs-12 no-padding-right" onclick="slideTo(10, '#owl-gang')">
                 <div class="col-xs-12 thumb-gang imgLiquid imgLiquidFill">
-                    <img src="public/img/ban3.png" alt="Owl Image">
+                    <img src="public/img/girlgang/gg_11.jpg" alt="Owl Image">
+                </div>
+            </div>
+            <div class="col-xs-12 no-padding-right" onclick="slideTo(11, '#owl-gang')">
+                <div class="col-xs-12 thumb-gang imgLiquid imgLiquidFill">
+                    <img src="public/img/girlgang/gg_12.jpg" alt="Owl Image">
+                </div>
+            </div>
+            <div class="col-xs-12 no-padding-right" onclick="slideTo(12, '#owl-gang')">
+                <div class="col-xs-12 thumb-gang imgLiquid imgLiquidFill">
+                    <img src="public/img/girlgang/gg_13.jpg" alt="Owl Image">
+                </div>
+            </div>
+            <div class="col-xs-12 no-padding-right" onclick="slideTo(13, '#owl-gang')">
+                <div class="col-xs-12 thumb-gang imgLiquid imgLiquidFill">
+                    <img src="public/img/girlgang/gg_14.jpg" alt="Owl Image">
+                </div>
+            </div>
+            <div class="col-xs-12 no-padding-right" onclick="slideTo(14, '#owl-gang')">
+                <div class="col-xs-12 thumb-gang imgLiquid imgLiquidFill">
+                    <img src="public/img/girlgang/gg_15.jpg" alt="Owl Image">
+                </div>
+            </div>
+            <div class="col-xs-12 no-padding-right" onclick="slideTo(15, '#owl-gang')">
+                <div class="col-xs-12 thumb-gang imgLiquid imgLiquidFill">
+                    <img src="public/img/girlgang/gg_16.jpg" alt="Owl Image">
+                </div>
+            </div>
+            <div class="col-xs-12 no-padding-right" onclick="slideTo(16, '#owl-gang')">
+                <div class="col-xs-12 thumb-gang imgLiquid imgLiquidFill">
+                    <img src="public/img/girlgang/gg_17.jpg" alt="Owl Image">
+                </div>
+            </div>
+            <div class="col-xs-12 no-padding-right" onclick="slideTo(17, '#owl-gang')">
+                <div class="col-xs-12 thumb-gang imgLiquid imgLiquidFill">
+                    <img src="public/img/girlgang/gg_18.jpg" alt="Owl Image">
+                </div>
+            </div>
+            <div class="col-xs-12 no-padding-right" onclick="slideTo(18, '#owl-gang')">
+                <div class="col-xs-12 thumb-gang imgLiquid imgLiquidFill">
+                    <img src="public/img/girlgang/gg_19.jpg" alt="Owl Image">
+                </div>
+            </div>
+            <div class="col-xs-12 no-padding-right" onclick="slideTo(19, '#owl-gang')">
+                <div class="col-xs-12 thumb-gang imgLiquid imgLiquidFill">
+                    <img src="public/img/girlgang/gg_20.jpg" alt="Owl Image">
+                </div>
+            </div>
+            <div class="col-xs-12 no-padding-right" onclick="slideTo(20, '#owl-gang')">
+                <div class="col-xs-12 thumb-gang imgLiquid imgLiquidFill">
+                    <img src="public/img/girlgang/gg_21.jpg" alt="Owl Image">
+                </div>
+            </div>
+            <div class="col-xs-12 no-padding-right" onclick="slideTo(21, '#owl-gang')">
+                <div class="col-xs-12 thumb-gang imgLiquid imgLiquidFill">
+                    <img src="public/img/girlgang/gg_22.jpg" alt="Owl Image">
+                </div>
+            </div>
+            <div class="col-xs-12 no-padding-right" onclick="slideTo(22, '#owl-gang')">
+                <div class="col-xs-12 thumb-gang imgLiquid imgLiquidFill">
+                    <img src="public/img/girlgang/gg_23.jpg" alt="Owl Image">
+                </div>
+            </div>
+            <div class="col-xs-12 no-padding-right" onclick="slideTo(23, '#owl-gang')">
+                <div class="col-xs-12 thumb-gang imgLiquid imgLiquidFill">
+                    <img src="public/img/girlgang/gg_24.jpg" alt="Owl Image">
+                </div>
+            </div>
+            <div class="col-xs-12 no-padding-right" onclick="slideTo(24, '#owl-gang')">
+                <div class="col-xs-12 thumb-gang imgLiquid imgLiquidFill">
+                    <img src="public/img/girlgang/gg_25.jpg" alt="Owl Image">
+                </div>
+            </div>
+            <div class="col-xs-12 no-padding-right" onclick="slideTo(25, '#owl-gang')">
+                <div class="col-xs-12 thumb-gang imgLiquid imgLiquidFill">
+                    <img src="public/img/girlgang/gg_26.jpg" alt="Owl Image">
+                </div>
+            </div>
+            <div class="col-xs-12 no-padding-right" onclick="slideTo(26, '#owl-gang')">
+                <div class="col-xs-12 thumb-gang imgLiquid imgLiquidFill">
+                    <img src="public/img/girlgang/gg_27.jpg" alt="Owl Image">
                 </div>
             </div>
         </div>
