Added banner to index

--- a/index.html
+++ b/index.html
@@ -162,16 +162,19 @@
 
             <div class="carousel-inner" role="listbox">
                 <div class="item active">
-                    <img src="public/img/banner_1.png" alt="Banner Camisetas">
+                    <img src="public/img/banner_1.png" alt="Banner Empoderamento">
                 </div>
                 <div class="item">
-                    <img src="public/img/banner_2.png" alt="Banner Camisetas 2">
+                    <img src="public/img/banner_2.png" alt="Banner Girl Gang">
                 </div>
                 <div class="item">
-                    <img src="public/img/banner_3.png" alt="Banner Girl Gang">
+                    <img src="public/img/banner_3.png" alt="Banner Estampas">
                 </div>
                 <div class="item">
-                    <img src="public/img/banner_4.png" alt="Banner Girl Gang">
+                    <img src="public/img/banner_4.png" alt="Banner Camisetas">
+                </div>
+                <div class="item">
+                    <img src="public/img/banner_5.png" alt="Banner Camisetas 2">
                 </div>
             </div>
 
