Final text for girlgang and sobre pages

--- a/girlgang.html
+++ b/girlgang.html
@@ -354,22 +354,25 @@
         </div>
          <div class="col-xs-12 no-padding titulo-section-box">
             <span class="ff-lato titulo-section">GIRL GANG</span>
-            <p class="ff-lato sub-frase">sub frase</p>
         </div>
-        <p class="col-xs-12 ff-lato texto-principal">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        <p class="col-xs-6 ff-lato texto-principal">A Canvas apresenta a Girl Gang, uma coleção que foi pensada e desenvolvida especialmente para você que sabe muito bem que mulher não é sinônimo de delicadeza. Força, resistência e luta a todas as gangues de garotas! 
+        <br>
+        <br>
+        Vitória Santos Cruz, a artista escolhida por vocês para criar as estampas da coleção Girl Gang, diz que viu no Projeto Canvas uma oportunidade de expor sua arte e incentivar outras mulheres a fazer o mesmo.
         </p>
-        <center><iframe width="560" height="315" src="https://www.youtube.com/embed/8tPnX7OPo0Q" frameborder="0" allowfullscreen></iframe></center>
+        <p class="col-xs-6 ff-lato texto-principal"> Nosso objetivo é empoderar cada vez mais mulheres. Pensando nisso, toda a produção da coleção foi feita exclusivamente por mulheres.
+        <br><br>
+        <strong>Produção e direção:</strong> Beatriz Castells
+        <br>
+        <strong>Beleza:</strong> Ana Paula Brandão
+        <br>
+        <strong>Fotografia:</strong> Lais Alves
+        <br>
+        <strong>Vídeo:</strong> Amanda Podanoscki 
+        <br>
+        <strong>Modelos:</strong> Ana Jackson, Carolina Dantas, Isadora Limonta e Luisa Krauze
+        </p>
+        <center><iframe width="560" height="315" src="https://www.youtube.com/embed/B8RsI93EpQE" frameborder="0" allowfullscreen></iframe></center>
     </section>
 </div>
 
