--- a/sobre.html
+++ b/sobre.html
@@ -127,6 +127,27 @@
             </ul>
         </div>
     </header>
+
+    <section class="content-section col-xs-12 no-padding">
+
+         <div class="col-xs-12 no-padding titulo-section-box">
+            <span class="ff-lato titulo-section">SOBRE</span>
+        </div>
+        <p class="col-xs-6 ff-lato texto-principal">A Canvas é fruto da disciplina de Planejamento e Produção em Multimeios, do curso de Comunicação e Multimeios da Universidade Estadual de Maringá.
+        <br>
+        Procuramos empoderar mulheres dando visibilidade a suas criações artísticas por meio da moda. Todas as fases, desde a produção das estampas até os materiais multimidiáticos, são feitos exclusivamente por mulheres.
+        </p>
+        <p class="col-xs-6 ff-lato texto-principal">A força e a luta é o que nos inspira e nos move, acreditamos que juntas podemos ser mais fortes.
+        <br>
+        Transmitimos nossa paixão pela moda e pela arte em camisetas que tem muito a dizer!
+        <br>
+        #euvistocanvas
+        <br>
+        #euvistoarte
+        </p>
+            
+        </p>
+    </section>
 </div>
 
 <footer class="col-xs-12 no-padding">
