Reorganizing photos, change layout view sobre, added section conato view sobre

--- a/girlgang.html
+++ b/girlgang.html
@@ -131,7 +131,10 @@
     <div class="parte-imagens col-xs-12 no-padding">
         <div id="owl-gang" class="col-xs-12 no-padding">
             <div class="col-xs-12 img-venda no-padding">
-                <center><img src="public/img/girlgang/gg_1.jpg" class="img-vertical" alt=""></center>
+                <center><img src="public/img/girlgang/gg_1.jpg" class="img-horizontal" alt=""></center>
+            </div>
+            <div class="col-xs-12 img-venda no-padding">
+                <center><img src="public/img/girlgang/gg_2.1.jpg" class="img-vertical" alt="Owl Image"></center>
             </div>
             <div class="col-xs-12 img-venda no-padding">
                 <center><img src="public/img/girlgang/gg_2.jpg" class="img-vertical" alt="Owl Image"></center>
@@ -200,9 +203,6 @@
                 <center><img src="public/img/girlgang/gg_23.jpg" class="img-horizontal" alt="Owl Image"></center>
             </div>
             <div class="col-xs-12 img-venda no-padding">
-                <center><img src="public/img/girlgang/gg_24.jpg" class="img-horizontal" alt="Owl Image"></center>
-            </div>
-            <div class="col-xs-12 img-venda no-padding">
                 <center><img src="public/img/girlgang/gg_25.jpg" class="img-horizontal" alt=""></center>
             </div>
             <div class="col-xs-12 img-venda no-padding">
@@ -221,119 +221,119 @@
                     <img src="public/img/girlgang/gg_1.jpg" alt="Owl Image">
                 </div>
             </div>
-            <div class="col-xs-12 no-padding-half" onclick="slideTo(1, '#owl-gang')">
+            <div class="col-xs-12 no-padding-right" onclick="slideTo(1, '#owl-gang')">
                 <div class="col-xs-12 thumb-gang imgLiquid imgLiquidFill">
-                    <img src="public/img/girlgang/gg_2.jpg" alt="Owl Image">
+                    <img src="public/img/girlgang/gg_2.1.jpg" alt="Owl Image">
                 </div>
             </div>
             <div class="col-xs-12 no-padding-half" onclick="slideTo(2, '#owl-gang')">
                 <div class="col-xs-12 thumb-gang imgLiquid imgLiquidFill">
-                    <img src="public/img/girlgang/gg_3.jpg" alt="Owl Image">
+                    <img src="public/img/girlgang/gg_2.jpg" alt="Owl Image">
                 </div>
             </div>
-            <div class="col-xs-12 no-padding-right" onclick="slideTo(3, '#owl-gang')">
+            <div class="col-xs-12 no-padding-half" onclick="slideTo(3, '#owl-gang')">
                 <div class="col-xs-12 thumb-gang imgLiquid imgLiquidFill">
-                    <img src="public/img/girlgang/gg_4.jpg" alt="Owl Image">
+                    <img src="public/img/girlgang/gg_3.jpg" alt="Owl Image">
                 </div>
             </div>
             <div class="col-xs-12 no-padding-right" onclick="slideTo(4, '#owl-gang')">
                 <div class="col-xs-12 thumb-gang imgLiquid imgLiquidFill">
-                    <img src="public/img/girlgang/gg_5.jpg" alt="Owl Image">
+                    <img src="public/img/girlgang/gg_4.jpg" alt="Owl Image">
                 </div>
             </div>
             <div class="col-xs-12 no-padding-right" onclick="slideTo(5, '#owl-gang')">
                 <div class="col-xs-12 thumb-gang imgLiquid imgLiquidFill">
-                    <img src="public/img/girlgang/gg_6.jpg" alt="Owl Image">
+                    <img src="public/img/girlgang/gg_5.jpg" alt="Owl Image">
                 </div>
             </div>
             <div class="col-xs-12 no-padding-right" onclick="slideTo(6, '#owl-gang')">
                 <div class="col-xs-12 thumb-gang imgLiquid imgLiquidFill">
-                    <img src="public/img/girlgang/gg_7.jpg" alt="Owl Image">
+                    <img src="public/img/girlgang/gg_6.jpg" alt="Owl Image">
                 </div>
             </div>
             <div class="col-xs-12 no-padding-right" onclick="slideTo(7, '#owl-gang')">
                 <div class="col-xs-12 thumb-gang imgLiquid imgLiquidFill">
-                    <img src="public/img/girlgang/gg_8.jpg" alt="Owl Image">
+                    <img src="public/img/girlgang/gg_7.jpg" alt="Owl Image">
                 </div>
             </div>
             <div class="col-xs-12 no-padding-right" onclick="slideTo(8, '#owl-gang')">
                 <div class="col-xs-12 thumb-gang imgLiquid imgLiquidFill">
-                    <img src="public/img/girlgang/gg_9.jpg" alt="Owl Image">
+                    <img src="public/img/girlgang/gg_8.jpg" alt="Owl Image">
                 </div>
             </div>
             <div class="col-xs-12 no-padding-right" onclick="slideTo(9, '#owl-gang')">
                 <div class="col-xs-12 thumb-gang imgLiquid imgLiquidFill">
-                    <img src="public/img/girlgang/gg_10.jpg" alt="Owl Image">
+                    <img src="public/img/girlgang/gg_9.jpg" alt="Owl Image">
                 </div>
             </div>
             <div class="col-xs-12 no-padding-right" onclick="slideTo(10, '#owl-gang')">
                 <div class="col-xs-12 thumb-gang imgLiquid imgLiquidFill">
-                    <img src="public/img/girlgang/gg_11.jpg" alt="Owl Image">
+                    <img src="public/img/girlgang/gg_10.jpg" alt="Owl Image">
                 </div>
             </div>
             <div class="col-xs-12 no-padding-right" onclick="slideTo(11, '#owl-gang')">
                 <div class="col-xs-12 thumb-gang imgLiquid imgLiquidFill">
-                    <img src="public/img/girlgang/gg_12.jpg" alt="Owl Image">
+                    <img src="public/img/girlgang/gg_11.jpg" alt="Owl Image">
                 </div>
             </div>
             <div class="col-xs-12 no-padding-right" onclick="slideTo(12, '#owl-gang')">
                 <div class="col-xs-12 thumb-gang imgLiquid imgLiquidFill">
-                    <img src="public/img/girlgang/gg_13.jpg" alt="Owl Image">
+                    <img src="public/img/girlgang/gg_12.jpg" alt="Owl Image">
                 </div>
             </div>
             <div class="col-xs-12 no-padding-right" onclick="slideTo(13, '#owl-gang')">
                 <div class="col-xs-12 thumb-gang imgLiquid imgLiquidFill">
-                    <img src="public/img/girlgang/gg_14.jpg" alt="Owl Image">
+                    <img src="public/img/girlgang/gg_13.jpg" alt="Owl Image">
                 </div>
             </div>
             <div class="col-xs-12 no-padding-right" onclick="slideTo(14, '#owl-gang')">
                 <div class="col-xs-12 thumb-gang imgLiquid imgLiquidFill">
-                    <img src="public/img/girlgang/gg_15.jpg" alt="Owl Image">
+                    <img src="public/img/girlgang/gg_14.jpg" alt="Owl Image">
                 </div>
             </div>
             <div class="col-xs-12 no-padding-right" onclick="slideTo(15, '#owl-gang')">
                 <div class="col-xs-12 thumb-gang imgLiquid imgLiquidFill">
-                    <img src="public/img/girlgang/gg_16.jpg" alt="Owl Image">
+                    <img src="public/img/girlgang/gg_15.jpg" alt="Owl Image">
                 </div>
             </div>
             <div class="col-xs-12 no-padding-right" onclick="slideTo(16, '#owl-gang')">
                 <div class="col-xs-12 thumb-gang imgLiquid imgLiquidFill">
-                    <img src="public/img/girlgang/gg_17.jpg" alt="Owl Image">
+                    <img src="public/img/girlgang/gg_16.jpg" alt="Owl Image">
                 </div>
             </div>
             <div class="col-xs-12 no-padding-right" onclick="slideTo(17, '#owl-gang')">
                 <div class="col-xs-12 thumb-gang imgLiquid imgLiquidFill">
-                    <img src="public/img/girlgang/gg_18.jpg" alt="Owl Image">
+                    <img src="public/img/girlgang/gg_17.jpg" alt="Owl Image">
                 </div>
             </div>
             <div class="col-xs-12 no-padding-right" onclick="slideTo(18, '#owl-gang')">
                 <div class="col-xs-12 thumb-gang imgLiquid imgLiquidFill">
-                    <img src="public/img/girlgang/gg_19.jpg" alt="Owl Image">
+                    <img src="public/img/girlgang/gg_18.jpg" alt="Owl Image">
                 </div>
             </div>
             <div class="col-xs-12 no-padding-right" onclick="slideTo(19, '#owl-gang')">
                 <div class="col-xs-12 thumb-gang imgLiquid imgLiquidFill">
-                    <img src="public/img/girlgang/gg_20.jpg" alt="Owl Image">
+                    <img src="public/img/girlgang/gg_19.jpg" alt="Owl Image">
                 </div>
             </div>
             <div class="col-xs-12 no-padding-right" onclick="slideTo(20, '#owl-gang')">
                 <div class="col-xs-12 thumb-gang imgLiquid imgLiquidFill">
-                    <img src="public/img/girlgang/gg_21.jpg" alt="Owl Image">
+                    <img src="public/img/girlgang/gg_20.jpg" alt="Owl Image">
                 </div>
             </div>
             <div class="col-xs-12 no-padding-right" onclick="slideTo(21, '#owl-gang')">
                 <div class="col-xs-12 thumb-gang imgLiquid imgLiquidFill">
-                    <img src="public/img/girlgang/gg_22.jpg" alt="Owl Image">
+                    <img src="public/img/girlgang/gg_21.jpg" alt="Owl Image">
                 </div>
             </div>
             <div class="col-xs-12 no-padding-right" onclick="slideTo(22, '#owl-gang')">
                 <div class="col-xs-12 thumb-gang imgLiquid imgLiquidFill">
-                    <img src="public/img/girlgang/gg_23.jpg" alt="Owl Image">
+                    <img src="public/img/girlgang/gg_22.jpg" alt="Owl Image">
                 </div>
             </div>
             <div class="col-xs-12 no-padding-right" onclick="slideTo(23, '#owl-gang')">
                 <div class="col-xs-12 thumb-gang imgLiquid imgLiquidFill">
-                    <img src="public/img/girlgang/gg_24.jpg" alt="Owl Image">
+                    <img src="public/img/girlgang/gg_23.jpg" alt="Owl Image">
                 </div>
             </div>
             <div class="col-xs-12 no-padding-right" onclick="slideTo(24, '#owl-gang')">
@@ -355,7 +355,7 @@
          <div class="col-xs-12 no-padding titulo-section-box">
             <span class="ff-lato titulo-section">GIRL GANG</span>
         </div>
-        <p class="col-xs-6 ff-lato texto-principal">A Canvas apresenta a Girl Gang, uma coleção que foi pensada e desenvolvida especialmente para você que sabe muito bem que mulher não é sinônimo de delicadeza. Força, resistência e luta a todas as gangues de garotas! 
+        <p class="col-xs-6 ff-lato texto-principal text-center">A Canvas apresenta a Girl Gang, uma coleção que foi pensada e desenvolvida especialmente para você que sabe muito bem que mulher não é sinônimo de delicadeza. Força, resistência e luta a todas as gangues de garotas! 
         <br>
         <br>
         Vitória Santos Cruz, a artista escolhida por vocês para criar as estampas da coleção Girl Gang, diz que viu no Projeto Canvas uma oportunidade de expor sua arte e incentivar outras mulheres a fazer o mesmo.
