--- a/sobre.html
+++ b/sobre.html
@@ -46,7 +46,7 @@
     </head>
 
 <body>
-<div class="container view-index">
+<div class="container view-sobre">
     <header class="col-xs-12 no-padding">
         <div class="header-firstrow col-xs-5 no-padding pull-right">
             <ul class="col-xs-12 no-padding ul-firstrow">
@@ -130,22 +130,45 @@
 
     <section class="content-section col-xs-12 no-padding">
 
-         <div class="col-xs-12 no-padding titulo-section-box">
+        <div class="col-xs-12 no-padding titulo-section-box">
             <span class="ff-lato titulo-section">SOBRE</span>
         </div>
-        <p class="col-xs-6 ff-lato texto-principal">A Canvas é fruto da disciplina de Planejamento e Produção em Multimeios, do curso de Comunicação e Multimeios da Universidade Estadual de Maringá.
-        <br>
-        Procuramos empoderar mulheres dando visibilidade a suas criações artísticas por meio da moda. Todas as fases, desde a produção das estampas até os materiais multimidiáticos, são feitos exclusivamente por mulheres.
+        <p class="col-xs-6 ff-lato texto-principal text-justify">A Canvas é fruto da disciplina de Planejamento e Produção em Multimeios, do curso de Comunicação e Multimeios da Universidade Estadual de Maringá.
+            <br>
+            Procuramos empoderar mulheres dando visibilidade a suas criações artísticas por meio da moda. Todas as fases, desde a produção das estampas até os materiais multimidiáticos, são feitos exclusivamente por mulheres.
         </p>
-        <p class="col-xs-6 ff-lato texto-principal">A força e a luta é o que nos inspira e nos move, acreditamos que juntas podemos ser mais fortes.
-        <br>
-        Transmitimos nossa paixão pela moda e pela arte em camisetas que tem muito a dizer!
-        <br>
-        #euvistocanvas
-        <br>
-        #euvistoarte
+        <p class="col-xs-6 ff-lato texto-principal text-justify">A força e a luta é o que nos inspira e nos move, acreditamos que juntas podemos ser mais fortes.
+            <br>
+            Transmitimos nossa paixão pela moda e pela arte em camisetas que tem muito a dizer!
+            <br>
+            <strong>#euvistocanvas</strong>
+            <br>
+            <strong>#euvistoarte</strong>
         </p>
-            
+        <div class="col-xs-12 no-padding">
+            <ul class="col-xs-12 no-padding icones">
+                <li class="col-xs-4 text-center">
+                    <i class="icone-sobre transition fa fa-bullhorn"></i>
+                    <span class="col-xs-12 no-padding ff-lato texto-icone transition">VOZ E VISIBILIDADE</span>   
+                </li>
+                <li class="col-xs-4 text-center">
+                    <i class="icone-sobre transition fa fa-female"></i>  
+                    <span class="col-xs-12 no-padding ff-lato texto-icone transition">EMPODERAMENTO</span>   
+                </li>
+                <li class="col-xs-4 text-center">
+                    <i class="icone-sobre transition fa fa-venus"></i>  
+                    <span class="col-xs-12 no-padding ff-lato texto-icone transition">LUTA</span>   
+                </li>
+            </ul>
+        </div>
+
+        <div class="col-xs-12 no-padding titulo-section-box">
+            <span class="ff-lato titulo-section">CONTATO</span>
+        </div>
+        <p class="col-xs-12 ff-lato texto-pricipal text-center">
+            Tem alguma dúvida, crítica ou sugestão? Quer compartilhar com a gente alguma coisa legal? Estamos esperando seu contato!
+            <br>Envie um e-mail para <strong>contato@canvas.com.br</strong>, ficaremos felizes com o seu contato.
+            <br>Você também pode conversar conosco pelo <a href=""><strong>Facebook</strong></a> ou <a href=""><strong>Instagram</strong></a> =)
         </p>
     </section>
 </div>
